unpackaged/main/default/objects/Activity/fields/AGS__c.field-meta.xml
<CustomField>
    <fullName>AGS__c</fullName>
    <label>AGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>