unpackaged/main/default/objects/Activity/fields/Assigned_List_Formula__c.field-meta.xml
<CustomField>
    <fullName>Assigned_List_Formula__c</fullName>
    <formula>IF(Owner:User.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned List Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>