unpackaged/main/default/objects/Activity/fields/Auto_Activity_Association__c.field-meta.xml
<CustomField>
    <fullName>Auto_Activity_Association__c</fullName>
    <label>Auto Activity Association</label>
    <type>TextArea</type>
</CustomField>