unpackaged/main/default/objects/Activity/fields/AutoMatchingResult__c.field-meta.xml
<CustomField>
    <fullName>AutoMatchingResult__c</fullName>
    <description>Used for matching Orphaned Activities.</description>
    <label>AutoMatchingResult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>