unpackaged/main/default/objects/Activity/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <description>Overall disposition of the call. Use of this field was changed over from Five9 to Vonage in Q2 2025. This field is populated with the most recent department specific disposition provided on the task</description>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vonage_Call_Dispositions</valueSetName>
    </valueSet>
</CustomField>