unpackaged/main/default/objects/Activity/fields/Call_Disposition_Collections__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_Collections__c</fullName>
    <description>Collections specific dispositions to show as options in the vonage LogACall utility bar feature</description>
    <label>Call Disposition Collections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Contacted - Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Disconnected/Wrong Number</fullName>
            </value>
            <value>
                <fullName>Hang Up</fullName>
            </value>
            <value>
                <fullName>No Answer - LVM</fullName>
            </value>
            <value>
                <fullName>No Answer - NML</fullName>
            </value>
            <value>
                <fullName>No Answer - Unable to leave message</fullName>
            </value>
            <value>
                <fullName>RPC - Attorney Involved</fullName>
            </value>
            <value>
                <fullName>RPC - Filing for Bankruptcy</fullName>
            </value>
            <value>
                <fullName>RPC - Funds not available</fullName>
            </value>
            <value>
                <fullName>RPC - Payment Link Sent</fullName>
            </value>
            <value>
                <fullName>RPC - Payments Scheduled</fullName>
            </value>
            <value>
                <fullName>RPC - Requested Bank Change</fullName>
            </value>
            <value>
                <fullName>RPC - Requested Call back</fullName>
            </value>
            <value>
                <fullName>RPC - Requested Payment Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>