unpackaged/main/default/objects/Activity/fields/Compliance_Task__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Task__c</fullName>
    <description>This field will be used to track this task as a compliance task and will be hidden from view.  When the task is completed a field on opportunity will be updated by a flow to indicate the date a Reg B letter was sent to a customer.</description>
    <inlineHelpText>This field will be used to track this task as a compliance task and will be hidden from view.  When the task is completed a field on opportunity will be updated by a flow to indicate the date a Reg B letter was sent to a customer.</inlineHelpText>
    <label>Compliance Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>