unpackaged/main/default/objects/Activity/fields/Current_Month_Log__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Log__c</fullName>
    <formula>IF( MONTH(  DATEVALUE(Date_Activity_Logged__c) ) ==  MONTH( TODAY() )  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Log</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>