unpackaged/main/default/objects/Activity/fields/Date_Activity_Logged__c.field-meta.xml
<CustomField>
    <fullName>Date_Activity_Logged__c</fullName>
    <description>Time and Date of Status when completed.</description>
    <label>Date Activity Logged</label>
    <type>DateTime</type>
</CustomField>