unpackaged/main/default/objects/Activity/fields/Email_Message_link__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_link__c</fullName>
    <formula>IF(
NOT(ISNULL(EmailMessage_ID__c)),HYPERLINK( $Setup.Instance_Settings__c.Salesforce_URL__c+EmailMessage_ID__c , "Email Message"),"")</formula>
    <label>Email Message link</label>
    <type>Text</type>
</CustomField>