unpackaged/main/default/objects/Activity/fields/Manager_For_Reports__c.field-meta.xml
<CustomField>
    <fullName>Manager_For_Reports__c</fullName>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager For Reports</label>
    <type>Text</type>
</CustomField>