unpackaged/main/default/objects/Activity/fields/Merge_With_F9_Activity__c.field-meta.xml
<CustomField>
    <fullName>Merge_With_F9_Activity__c</fullName>
    <externalId>true</externalId>
    <label>Merge With F9 Activity</label>
    <length>32</length>
    <type>Text</type>
</CustomField>