unpackaged/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Call Disposition Reason Detail</description>
    <inlineHelpText>Pick All that Apply</inlineHelpText>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Moving Forward</fullName>
            </value>
            <value>
                <fullName>NI- Advance too Small</fullName>
            </value>
            <value>
                <fullName>NI- Franchise</fullName>
            </value>
            <value>
                <fullName>NI- Has Non-MCA Funding</fullName>
            </value>
            <value>
                <fullName>NI- Hung Up</fullName>
            </value>
            <value>
                <fullName>NI- No Need</fullName>
            </value>
            <value>
                <fullName>NI- Price</fullName>
            </value>
            <value>
                <fullName>NI- Software</fullName>
            </value>
            <value>
                <fullName>NQ- Annual Sales Volume Too Low</fullName>
            </value>
            <value>
                <fullName>NQ- BK</fullName>
            </value>
            <value>
                <fullName>NQ- CC Volume Low</fullName>
            </value>
            <value>
                <fullName>NQ- Home Based</fullName>
            </value>
            <value>
                <fullName>NQ- MCA Payoff too High</fullName>
            </value>
            <value>
                <fullName>NQ- No Credit Cards</fullName>
            </value>
            <value>
                <fullName>NQ- Restricted Industry</fullName>
            </value>
            <value>
                <fullName>NQ- Seasonal</fullName>
            </value>
            <value>
                <fullName>NQ- Stated Credit</fullName>
            </value>
            <value>
                <fullName>NQ- TIB</fullName>
            </value>
            <value>
                <fullName>NQ- Use of Funds</fullName>
            </value>
            <value>
                <fullName>Scheduled Call Back</fullName>
            </value>
            <value>
                <fullName>Timeframe - 30-60 Days</fullName>
            </value>
            <value>
                <fullName>Timeframe - 60-90 Days</fullName>
            </value>
            <value>
                <fullName>Timeframe - 90 Days</fullName>
            </value>
            <value>
                <fullName>Timeframe - Within 30 Days</fullName>
            </value>
            <value>
                <fullName>Transferred Call</fullName>
            </value>
            <value>
                <fullName>NQ - Restricted State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>