unpackaged/main/default/objects/Activity/fields/Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>Response_Channel__c</fullName>
    <description>Method of contact with customer</description>
    <inlineHelpText>Method of contact with customer</inlineHelpText>
    <label>Response Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Internet Application</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>