unpackaged/main/default/objects/Activity/fields/RPC__c.field-meta.xml
<CustomField>
    <fullName>RPC__c</fullName>
    <description>RPC Call Disposition Status</description>
    <inlineHelpText>Enter Call Disposition</inlineHelpText>
    <label>RPC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>