unpackaged/main/default/objects/Activity/fields/Trigger_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in workflow rule</description>
    <label>Trigger Workflow</label>
    <type>Checkbox</type>
</CustomField>